--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -51,6 +51,6 @@
 .navbar__shopping {
   display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   width: 20%;
 }
