--- a/src/styles/CategoryList.css
+++ b/src/styles/CategoryList.css
@@ -1,9 +1,9 @@
 .container__main {
+  grid-column:  1 /  2;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
-  background-color: #EDEDED;
 }
 
 .container__categorys {
@@ -11,7 +11,6 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  min-width: 15%;
   list-style: none;
   margin-left: 10px;
   box-shadow: 10px 0 5px -5px rgba(165, 162, 162, 0.5);
@@ -34,19 +33,8 @@
   justify-content: flex-start;
   align-items: flex-start;
   padding: 0;
-  width: 100%;
   list-style: none;
   margin-top: 0;
-}
-
-.container__products__list {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  list-style: none;
-  margin-top: 0;
-  padding: 10px;
 }
 
 .category__button {
