--- a/src/styles/ProductsList.css
+++ b/src/styles/ProductsList.css
@@ -1,12 +1,21 @@
+.container__products__list {
+  grid-column:  2 /  3;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  list-style: none;
+}
+
 .products__list {
   display: flex;
   flex-direction: column;
-  background-color: #FFFFFF;
-  padding: 20px;
+  background-color: #fff;
+  padding: 15px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  margin: 20px auto;
-  max-width: 300px;
+  margin: 10px;
+  max-width: 200px;
+  max-height: auto;
   gap: 5px;
 }
 
@@ -31,6 +40,7 @@
 .products__list img {
   display: block;
   max-width: 100%;
+  max-height: 200px;
   height: auto;
   margin: 0 auto;
 }
@@ -50,7 +60,7 @@
 }
 
 .product__shipping {
-  font-size: 0.7rem;
+  font-size: 1rem;
   color: #2CB56E;
   display: inline;
   line-height: normal;
