--- a/src/styles/ProductsList.css
+++ b/src/styles/ProductsList.css
@@ -14,15 +14,10 @@
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin: 10px;
-  max-width: 200px;
-  max-height: auto;
+  width: 200px; 
+  min-height: 200px;
   gap: 5px;
-}
-
-.products__list__span {
-  font-size: 0.7rem;
-  font-weight: bold;
-  text-transform: uppercase;
+  overflow: hidden;
 }
 
 .products__list h2 {
@@ -60,7 +55,7 @@
 }
 
 .product__shipping {
-  font-size: 1rem;
+  font-size: 0.7rem;
   color: #2CB56E;
   display: inline;
   line-height: normal;
@@ -86,7 +81,7 @@
 }
 
 .product__shipping__full svg {
-  width: 20%;
+  width: 25%;
   height: 100%;
   line-height: normal;
   margin-left: 5px;
