--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -12,7 +12,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40%;
+  width: 33%;
 }
 
 .navbar__logo img {
@@ -31,11 +31,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40%;
+  width: 34%;
 }
 
 .navbar__search input {
-  width: 70%;
+  width: 80%;
   padding: 10px;
   border: none;
   border-right: #b2b2b2 solid 1px;
@@ -51,6 +51,6 @@
 .navbar__shopping {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
-  width: 20%;
+  justify-content: center;
+  width: 33%;
 }
