--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -21,6 +21,26 @@
 }
 
 @media screen and (max-width: 768px) {
-  
-  
+  .home__container {
+    grid-template-columns: 1fr;
+  }
+
+  .home__products {
+    grid-template-columns: 1fr;
+  }
+
+  .categories {
+    display: none;
+  }
+
+  .categories.active {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+  .products-container {
+    display: block;
+  }
 }
