--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -23,11 +23,11 @@
 @media screen and (max-width: 840px) {
   .home__products {
     display: grid;
-    grid-template-columns:  30%  70%;
+    grid-template-columns:  35%  65%;
   }
 }
 
-@media screen and (max-width: 480px){
+@media screen and (max-width: 320px){
   .home__container {
     grid-template-columns: 1fr;
   }
@@ -36,6 +36,7 @@
     grid-template-columns: 1fr;
   }
 
+
   .categories {
     display: none;
   }
@@ -43,11 +44,7 @@
   .categories.active {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: flex-start;
     width: 100%;
-  }
-
-  .products-container {
-    display: block;
   }
 }
